Changelog for JVCL 3.0
======================
2004-08-09
- JvWStrUtils.pas moved to JCL as JclWideStrings.pas // (rom)
2004-08-06
- The JvUrlGrabbers now have a Port property and more events that can be triggered. // obones
2004-07-27
- run/JvZlibMultiple.pas: Added support for selective extraction and listing archive contents without 
  writing any files to disk. Parameters added to OnDecompressingFile and OnDecompressedFile events. // WPOstma 
2004-07-25
- Started to tighten Shift check for all keyboard input. // (rom)
- Mantis 1912: TJvSpinEdit now has a ShowButton property. // obones
- Bug fix and Mantis 1912: TJvStandardMenuItemPainter now paints correctly its checkmarks if there are
  no image lists set. // obones
2004-07-24
- JvOfficeColorPanel can now select its buttons with a right click. Set RightClickSelect to True if you want that, it
  is False by default to keep the previous behaviour. If there is a popup menu the button will only be selected if
  SelectIfPopup is True (it is False by Default). This is for Mantis #1904 and is based on the code given by cpall  // obones
2004-07-22
- Fixed: JvComCtrls.TJvTreeView tree nodes do not keep their checked state when set before the first WM_PAINT event // ahuser
- Improved: JvComCtrls.TJvIPAddress now supports the TAB for each field. Property TabThroughFields controls this feature // ahuser
- Class hierarchy changed: JvComCtrls.TJvIPAddress now inherits from TJvCustomControl instead of TJvWinControl // ahuser
- Fixed: JvComCtrls.TJvIPAddress now changes the controls's background. // ahuser
- Fixed: JvCtrls.TJvCustomImageButton has ignored Alignment. // ahuser
2004-07-21
- TJvDesktopAlert now has styles, use the StyleOptions property to define the parameters // obones
- TJvDesktopAlert can now use the Grow From Center style // obones
- Introduced TJvDesktopAlert.StyleOptions.StartSteps and EndSteps to control the number of
  steps in the start and end animations // obones